# laniakea

.github/workflows/: build_images.yml
docs/: dev_guide.md
hydra/hydra/: Chart.yaml  values.yaml
hydra/hydra/templates/: agent.yaml  dask.yaml  sac.yaml
hydra/images/: build.sh
hydra/images/hydra-dev/: Dockerfile  package.json  pyproject.toml  settings.json  start.sh
hydra/images/worker-cpu/: .gitignore  Dockerfile
hydra/lib/: .gitignore  README.md  pyproject.toml
hydra/lib/laniakea/: cli.py
hydra/lib/laniakea/hydra/loader/: __init__.py  dask_plugin.py  fs.py  gcs.py  http.py  utils.py
hydra/lib/laniakea/hydra/scripts/: __init__.py  agent.py  agent_executor.py
norma/images/: build.sh
norma/images/apollo/: Dockerfile
norma/images/server/: Dockerfile
norma/images/storage/: Dockerfile  cloud.go  db.go  go.mod  imports.go  main.go
norma/images/ui/: 0001-First-patchset.patch  Dockerfile  auth.go  errors.go  go.mod  graphql.go  imports.go  logging.go  storage.go  ui.go  ui_server.go
norma/images/wait/: Dockerfile  go.mod  wait.go
norma/norma/: .helmignore  Chart.yaml  values.yaml
norma/norma/templates/: _helpers.tpl  apollo.yaml  graphql.yaml  hasura.yaml  install.yaml  sac.yaml  sql.yaml  storage.yaml  towel.yaml  ui.yaml
packaging/gce/dev_all_in_one/: 502.html  hydra.py  install.sh  nginx.conf  norma.py  norma_sync.py  packer.json
packaging/gce/k3s_image/: build.sh  install.sh  mount.py  packer.json
